--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@reduxjs/toolkit": "^2.5.1",
-    "axios": "^1.7.9",
+    "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
     "dayjs": "^1.11.13",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.5.0",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -36,14 +36,15 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "tailwind-merge": "^3.0.1",
+    "swiper": "^11.2.5",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.3.0",
+    "eslint": "^9.22.0",
     "eslint-config-next": "15.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
