--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
@@ -43,6 +44,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
+    "@types/node": "25.0.3",
+    "@types/react": "19.2.7",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.1.7",
     "postcss": "^8.5.3",
